Add ui, some refactor